force-app/main/default/objects/Revenue__c/fields/RelatedIssueDetails__c.field-meta.xml
<CustomField>
    <fullName>RelatedIssueDetails__c</fullName>
    <label>RelatedIssueDetails</label>
    <referenceTo>IssueDetails__c</referenceTo>
    <relationshipLabel>Revenue</relationshipLabel>
    <relationshipName>Revenue</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>