force-app/main/default/objects/Revenue__c/fields/RelatedMember__c.field-meta.xml
<CustomField>
    <fullName>RelatedMember__c</fullName>
    <label>RelatedMember</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Revenue</relationshipLabel>
    <relationshipName>Revenue</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>