force-app/main/default/objects/Revenue__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &lt;&gt; TODAY()</errorConditionFormula>
    <errorMessage>Date cannot be of past or future</errorMessage>
</ValidationRule>